1.3.3:
-Fix: Crash when adding a directory

1.3.2:
-Fix: Crash when trying to write covers (attempt #2)

1.3.1:
-Add: Update translations
-Fix: Crash when trying to write covers

1.3.0:
-Add: Update translations

1.2.90 (1.3.0 rc1):
-Add: Copy embedded covers for ogg (only reading), mp3, mp4 and flac files
-Add: Option to copy embedded covers to the output directory
-Add: Honor total disc numbers
-Add: Session management
-Change: By default log files won't be written to the hard drive anymore, it can be activated in the config dialog though
-Fix: Conversion problems when using pipes with newer KDE/Qt versions
-Fix: Don't write empty tags
-Fix: Initial loading of conversion profiles

1.2.1:
-Add: French translation
-Fix: Make mplayer log less when decoding videos
-Fix: Remove old log files on start up

1.2.0:
-Add: Update translations
-Remove: French, Serbian, Russian and Brazilian Portuguese translations since they are less than 80% complete

1.1.90 (1.2.0 rc1):
-Add: Aften plugin
-Add: Speex plugin
-Add: Plugin info dialog
-Add: Make it possible to use experimental codecs with ffmpeg
-Add: Make it possible to use user defined arguments with ffmpeg
-Add: Re-add aac/m4a encoding to the ffmpeg plugin
-Change: Query ffmpeg for supported codecs

1.1.0:
-Add: Estonian translation (by Mihkel Tõnnov)
-Add: Serbian translation (by Slobodan Terzić)
-Add: Spanish (Argentinian) translation (by akana_sfe)
-Change: Only use wav as temp codec

1.0.90 (1.1.0 rc1):
-Add: Portuguese translation (by Sérgio Marques)
-Add: Brazilian Portuguese translation (by Tex Weissffudder)
-Add: Russian translation (by Alexey Ivanov)
-Add: Inform the user if there is a better backend available for a given format (e.g. prefer lame over ffmpeg)
-Add: Make it possible to choose the preferred extension for ogg vorbis files
-Add: Playing CD tracks before ripping them
-Add: Fluidsynth plugin
-Add: Possibility to write temporary files to /dev/shm
-Change: Prevent options dialogs from getting too wide