@@ -87,6 +87,7 @@ public:
             bool useSharedMemoryForTempFiles;
             int maxSizeForSharedMemoryTempFiles; // maximum file size for storing in shared memory [MiB]
             int sharedMemorySize; // the size of the tmpfs [MiB]
+            bool usePipes;
         } advanced;
 
         struct CoverArt
