@@ -44,7 +44,6 @@ private:
     KIntSpinBox *iNumFiles;
     QCheckBox *cWaitForAlbumGain;
     QCheckBox *cCreateActionsMenu;
-    QCheckBox *cWriteLogFiles;
     KComboBox *cReplayGainGrouping;
 
     Config *config;
